# contactlookup

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  python-package.yml
contact_lookup/: __init__.py  definitions.py  logging_configuration.conf
contact_lookup/models/: address.py  contact.py  phone_number.py
contact_lookup/services/: data_store_service.py  file_data_store_service.py
contactlookup/: __init__.py  __main__.py  controller.py  definitions.py  logging_configuration.conf  utils.py
contactlookup/models/: address.py  contact.py  email.py  phone_number.py
contactlookup/services/: data_store_service.py  file_data_store_service.py
tests/: address_test.py  contact_test.py  controller_test.py  email_test.py  file_data_store_service_test.py  main_test.py  phone_number_test.py  utils_test.py
tests/data/: contacts.vcf
