[tool.poetry]
name = "contactlookup"
version = "0.1.0"
description = "self-contained contacts API for searching through VCF for contact records"
authors = ["Bryan Wodi <pypi.envy443@dralias.com>"]
license = "GNU GPL v3.0"
readme = "README.md"
packages = [{include = "contact_lookup"}]
include = [
    {path = "tests/data", format = ["sdist", "wheel"]},
    {path = "tests", format = ["sdist"]},
]

[tool.poetry.scripts]
contactlookup = "contact_lookup.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/talk2bryan/contactlookup/issues"

[tool.poetry.dependencies]
python = "^3.10"
vobject = "^0.9.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"
pytest-datafiles = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
