[tool.poetry]
name = "contactlookup"
version = "2.0.0"
description = "self-contained contacts API for searching through VCF for contact records"
authors = ["Bryan Wodi <pypi.envy443@dralias.com>"]
license = "GNU GPL v3.0"
readme = "README.md"
packages = [{include = "contactlookup"}]
include = [
    {path = "tests/data", format = ["wheel"]},
    {path = "tests", format = ["sdist"]},
]

[tool.poetry.scripts]
contactlookup = "contactlookup.__main__:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/talk2bryan/contactlookup/issues"

[tool.poetry.dependencies]
python = "^3.10"
vobject = "^0.9.8"
fastapi = {extras = ["standard"], version = "^0.115.0"}
fire = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"
pytest-datafiles = "^3.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
